--- a/packages/backend/biome.json
+++ b/packages/backend/biome.json
@@ -15,7 +15,11 @@
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true
+			"recommended": true,
+			"suspicious": {
+				"useIterableCallbackReturn": "off",
+				"noAssignInExpressions": "off"
+			}
 		}
 	},
 	"javascript": {
